--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "uw-due-date",
   "version": "1.0.0",
+  "type": "module",
   "description": "Academic task tracker for University of Washington students",
   "main": "index.html",
   "scripts": {
@@ -19,7 +20,7 @@
   "author": "UW Due Date Team",
   "license": "MIT",
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.4.20"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
